# volmaris-forge

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  vcpkg.json
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: 00-vision.md  01-architecture.md  02-ui-ux.md
src/app/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  smoke_test.cpp
